--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,6 @@
 }
 
 .header-title {
-  
   width: 50%;
   margin: 100px;
 }
@@ -26,66 +25,71 @@
 }
 .header-title {
   color: #333;
-  font-family: Inconsolata;
+
   font-size: 1.5rem;
-  font-style: normal;
+
   font-weight: 700;
-  line-height: normal;
-  letter-spacing: -0.12rem;
-  text-transform: uppercase;
 }
 .container-div {
   display: flex;
   justify-content: space-around;
+
+  margin-top: 16.76rem;
+  margin-left: 10.5rem;
+  margin-right: 7.44rem;
 }
 .banner-text {
-  color: var(--gray-1, #333);
-  font-family: Space Mono;
-  font-size: 4rem;
-  font-style: normal;
+  color: #333;
+
+  font-size: 3.5rem;
+
   font-weight: 700;
-  line-height: normal;
-  letter-spacing: -0.14rem;
 }
 .banner-des {
-  color: var(--gray-2, #4f4f4f);
-  font-family: Space Mono;
-  font-size: 1.5rem;
-  font-style: normal;
+  color: #4f4f4f;
+
+  font-size: 1.2rem;
+
   font-weight: 400;
-  line-height: normal;
-  letter-spacing: -0.0525rem;
+
+  padding: 2.2rem;
+
+  margin-right: 200px;
+  position: relative;
+  right: 30px;
 }
 .btn-primary {
   width: 13.5rem;
   height: 4.25rem;
-  flex-shrink: 0;
-  background: var(--gray-1, #333);
+
+  background: #333;
 
   color: #fff;
-  font-family: Space Mono;
+
   font-size: 0.875rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: -0.03063rem;
-  text-transform: uppercase;
 }
 .footer-section {
   color: #bdbdbd;
   text-align: center;
-  font-family: Montserrat;
+
   font-size: 0.875rem;
-  font-style: normal;
+
   font-weight: 500;
-  line-height: normal;
 }
 span {
   color: #bdbdbd;
-  font-family: Montserrat;
+
   font-size: 0.875rem;
-  font-style: normal;
+
   font-weight: 700;
-  line-height: normal;
+
   text-decoration-line: underline;
+}
+.banner-img {
+  margin-bottom: 32.53rem;
+  /* width: 90rem;
+  height: 67.5rem; */
+}
+text-container {
+  padding: 2.5rem;
 }
